--- a/DesafioVoalle.Backend/appsettings.json
+++ b/DesafioVoalle.Backend/appsettings.json
@@ -8,6 +8,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"conn": "Filename=./App_Data/database.prod.db"
+		"conn_sqlite": "Filename=./App_Data/database.prod.db",
+		"conn_sqlserver": "Server=tcp:mididb.database.windows.net,1433;Initial Catalog=desafio_voalle;Persist Security Info=False;User ID=midiway;Password=Z81kl6=MyI[];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 	}
 }
